--- a/composer.json
+++ b/composer.json
@@ -10,8 +10,10 @@
         "laravel/framework": "^10.10",
         "laravel/sanctum": "^3.2",
         "laravel/tinker": "^2.8",
+        "maatwebsite/excel": "^3.1",
         "rap2hpoutre/fast-excel": "^5.3",
-        "simplesoftwareio/simple-qrcode": "^4.2"
+        "simplesoftwareio/simple-qrcode": "^4.2",
+        "symfony/process": "^6.3"
     },
     "require-dev": {
         "fakerphp/faker": "^1.9.1",
